samples/_failures_safe/1761650316_e29fd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dca8f625.c:174: error: expected ‘;’, ‘,’ or ‘)’ at end of input
